hunt/beta/custom.34-gateway-httproute-app1.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-route
  namespace: app1
spec:
  parentRefs:
  - name: anycast-shared-gateway
    namespace: anycast-shared-gateway
  hostnames:
  - apps.cluster-wnvls.dynamic.redhatworkshops.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app1
    backendRefs:
    - name: app1
      port: 8080
