hunt/beta/custom.36-gateway-httproute-app2.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-route
  namespace: app2
spec:
  parentRefs:
  - name: anycast-shared-gateway
    namespace: anycast-shared-gateway
  hostnames:
  - apps.cluster-wnvls.dynamic.redhatworkshops.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app2
    backendRefs:
    - name: app2
      port: 8080
