hunt/beta/test_http_route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-httproute
  namespace: app2
spec:
  parentRefs:
  - name: anycast-shared-gateway
    namespace: anycast-shared-gateway
  hostnames:
  - route-anycast-anycast-shared-gateway.apps.cluster-wnvls.dynamic.redhatworkshops.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app2
    backendRefs:
    - name: app2
      port: 8080
...
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-httproute
  namespace: app1
spec:
  parentRefs:
  - name: anycast-shared-gateway
    namespace: anycast-shared-gateway
  hostnames:
  - route-anycast-anycast-shared-gateway.apps.cluster-wnvls.dynamic.redhatworkshops.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app1
    backendRefs:
    - name: app1
      port: 8080
...
